// this protoc command _basically_ works, just outputs to the wrong directory
// good ol' windows and double backslashes >_<
// protoc --proto_path .\user_service .\user_service\user_service.proto "-IC:\\Users\\georg\\.protoc" "-IC:\\Users\\georg\\go\\pkg\\mod\\github.com\\grpc-ecosystem\\grpc-gateway@v1.9.0\\third_party\\googleapis\\google\\api" --go_out=plugins=grpc:../../
// TODO: Add grpc-gateway

syntax = "proto3";

//TODO:
//import "google/api/annotations.proto";

package server;
option go_package = "src/proto";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {

  }
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1;
  string name = 2;
}